# solitaire-ocr

./: .gitignore
rust/: Cargo.toml  output.json
rust/src/: main.rs
