[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
fantoccini = "0.21.2"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22.1"
anyhow = "1.0.71"
opencv = "0.93.5"
